[gd_scene load_steps=16 format=2]

[ext_resource path="res://gameplay_scenes/LaserBeam.gd" type="Script" id=1]
[ext_resource path="res://assets/images/glowing_circle.png" type="Texture" id=2]
[ext_resource path="res://assets/images/metal.png" type="Texture" id=3]
[ext_resource path="res://assets/images/bulb.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 20 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.582915, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0.518072, 1 ), 0.0, -3.53434, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.7
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 50.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.503614, 0.957505 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 2
emission_box_extents = Vector3( 60, 20, 1 )
flag_align_y = true
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
tangential_accel_random = 1.0
scale = 0.3
scale_curve = SubResource( 9 )

[sub_resource type="Environment" id=11]
background_mode = 4
glow_enabled = true
glow_levels/4 = true
glow_intensity = 0.5
glow_blend_mode = 0
glow_hdr_threshold = 1.92
glow_hdr_luminance_cap = 2.0
glow_bicubic_upscale = true

[node name="LaserBeam2D" type="RayCast2D"]
light_mask = -2147483646
enabled = true
cast_to = Vector2( 0, 0 )
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="BulbBody" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Bulb" type="Sprite" parent="BulbBody"]
position = Vector2( 15, 2 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Metal" type="Sprite" parent="BulbBody"]
position = Vector2( 15, 2 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulbBody"]
position = Vector2( 24, 2 )
shape = SubResource( 1 )

[node name="FillLine2D" type="Line2D" parent="."]
position = Vector2( -1, 0 )
points = PoolVector2Array( 0, 0, 100, 0 )
width = 100.0
default_color = Color( 0.5, 3, 6, 1 )
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 8.0
antialiased = true

[node name="CastingParticles2D" type="Particles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
show_behind_parent = true
emitting = false
lifetime = 0.3
visibility_rect = Rect2( 0, -18.722, 29.6756, 38.4841 )
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="CollisionParticles2D" type="Particles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
show_behind_parent = true
emitting = false
amount = 16
lifetime = 0.3
visibility_rect = Rect2( -2500, -2500, 5000, 5000 )
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="BeamParticles2D" type="Particles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
emitting = false
amount = 50
preprocess = 1.0
randomness = 1.0
visibility_rect = Rect2( -2500, -2500, 5000, 5000 )
local_coords = false
draw_order = 1
process_material = SubResource( 10 )
texture = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 11 )
